--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-slick": "^0.29.0",
     "sass": "^1.55.0"
   },
