--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -94,6 +94,9 @@
     },
     "navigation": {},
     "settings": {},
-    "project": {}
+    "project": {},
+    "works": {
+      "works": {}
+    }
   }
 }
