--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -81,6 +81,11 @@
         },
         "items": {}
       }
+    },
+    "Video": {
+      "default": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
