--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
     "react-slick": "^0.29.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@prismicio/types": "^0.2.3",
