--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -84,7 +84,14 @@
     },
     "Video": {
       "default": {
-        "primary": {}
+        "primary": {
+          "intro": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
       }
     }
   },
